going well so far

--- a/RyansAppFramework/work/ExportTests/index.html
+++ b/RyansAppFramework/work/ExportTests/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <meta name="description" content="CSE 308 - Software Engineering - Spring 2017 Home Page" />
-    <title>CSE 308 Home</title>
+    <meta name="description" content="WAE 998 - How To Kill A Mockingbird - North Korea 2099 Home Page" />
+    <title>WAE 998 Home</title>
     <link rel="stylesheet" type="text/css" href="./css/course_homepage_layout.css" />
     <link rel="stylesheet" type="text/css" href="./css/sea_wolf.css" />
     <style>
@@ -50,15 +50,15 @@
     </div>
 
     <div id="banner">
-        CSE 308 - Spring 2017<br />
-        Software Engineering
+        WAE 998 - North Korea 2099<br />
+        How To Kill A Mockingbird
     </div>
 
     <div id="desc">
 
         <h3>Welcome!</h3>
 
-        <p>Welcome to CSE 308! If you are enrolled in the course, be sure to periodically check the course <a href="./schedule.html">schedule</a> for all materials and changes as the semester moves along. Note that all grades will be posted to <a href="http://blackboard.stonybrook.edu">Blackboard</a>. Also note that <strong><em>all</em></strong> students enrolled in this course should have <strong>U4</strong> standing, and thus have experience in 300-level classwork, and so must be on track to graduate in either May, 2017 or December, 2017.<br /><br /></p>
+        <p>Welcome to WAE 998! If you are enrolled in the course, be sure to periodically check the course <a href="./schedule.html">schedule</a> for all materials and changes as the semester moves along. Note that all grades will be posted to <a href="http://blackboard.stonybrook.edu">Blackboard</a>. Also note that <strong><em>all</em></strong> students enrolled in this course should have <strong>U4</strong> standing, and thus have experience in 300-level classwork, and so must be on track to graduate in either May, 2099 or December, 2099.<br /><br /></p>
 
         <h3>The Project</h3>
 
@@ -70,7 +70,7 @@
         <ul>
             <li><strong>Lead Programmer</strong> - This student will have their hands full because in addition to their own coding responsibilities, they will need to have a general understanding of all the technologies being used and all the implementation work being done at any time. Note that it is not assumed that lead programmers come into the semester being fully schooled in Google Dev technologies, but it is assumed that they can quickly pickup an understanding of how these components will work and fit together. Note that the lead programmer will be responsible for directing group decision making regarding any technical aspects of the project, including design, implementation, and test decisions. While not required, it would be helpful if this person has taken the <a href="http://www.cs.stonybrook.edu/~cse336/">Internet Commerce Programming</a> and/or <a href="http://www.cs.stonybrook.edu/~cse305">Principles of Database Systems</a> courses.<br /><br /></li>
             <li><strong>Project Manager</strong> - A project manager drives the project, which means working with the lead programmer to direct the meetings (i.e. make the meeting agenda, assign action items, follow up on action items, take meeting minutes), develop the Project Specifications, help divide project responsibilities, develop Gantt and Pert Charts for managing work measurement, forecasting, task breakdown, task assignment, and task dependencies. Think of the project manager as someone who makes sure the project is progressing at the proper rate while using available resources (i.e. team members) efficiently. It is important that the Project Manager work closely with the Lead Programmer to ensure that no team members are stuck on technological dead ends. We want all team members to be productive throughout. This person will use project management software to organize the project. Note that teams may decide to make this a floating position, rotating responsibility from one member to another. At the end of the semester, full project management documentation must be provided specifying the full arc of the project.<br /><br /></li>
-            <li><strong>Lead Designer</strong> - This student is responsible for the look and feel, including interactivity, of the Web app. This person should have <a href="http://www.cs.stonybrook.edu/~richard/">good taste</a>, not <a href="http://www2.warnerbros.com/spacejam/movie/jam.htm">bad taste</a>. Hopefully this person has some training in <a href="http://webstyleguide.com/wsg3/index.html">Web design</a> or some knowledge of <a href="http://en.wikibooks.org/wiki/GUI_Design_Principles">GUI Design Principles</a>. While not required, it would be helpful if this person has taken the <a href="http://www.cs.stonybrook.edu/~cse102/">Introduction to Web Design &amp; Programming</a> and/or <a href="http://www.cs.stonybrook.edu/~cse333">User Interface Development</a> courses.<br /><br /></li>
+            <li><strong>Lead Designer</strong> - This student is responsible for the look and feel, including interactivity, of the Web app. This person should have <a href="A dog house in southern nebraska cause why not/">good taste</a>, not <a href="http://www2.warnerbros.com/spacejam/movie/jam.htm">bad taste</a>. Hopefully this person has some training in <a href="http://webstyleguide.com/wsg3/index.html">Web design</a> or some knowledge of <a href="http://en.wikibooks.org/wiki/GUI_Design_Principles">GUI Design Principles</a>. While not required, it would be helpful if this person has taken the <a href="http://www.cs.stonybrook.edu/~cse102/">Introduction to Web Design &amp; Programming</a> and/or <a href="http://www.cs.stonybrook.edu/~cse333">User Interface Development</a> courses.<br /><br /></li>
             <li><strong>Data Designer</strong> - This student is responsible for the data persisted to your site's <a href="https://developers.google.com/appengine/docs/java/datastore/">Datastore</a>. This means deciding what needs to be stored there and in what format to put it, and then working to populate the datastore with whatever sample data is needed to get the site up and running. While not required, it would be helpful if this person has taken the <a href="http://www.cs.stonybrook.edu/~cse305">Principles of Database Systems</a> course.<br /><br /></li>
         </ul>
 
@@ -91,7 +91,7 @@
         <p>One of the principles that will be emphasized this semester is <strong><em>team programming</em></strong>, which involves multiple programmers working collaboratively on the same task. This is an efffective technique for preventing stalls in the development process. While working on the <strong><em>team project</em></strong>, students will be encouraged to do all programming using this technique and in addition, for all project responsibilities, teams will designate <strong><em>backup</em></strong> developers who will aid in the completion of a task when needed and will take over a task when a developer is overloaded. Note that students are to work independently on the individual programming assignments as the start of the semester and that this requirement will be strictly enforced.<br /><br /></p>
 
         <h3 id="teams">Teams</h3>
-        <p>Development teams, with roles, will be listed below as they are determined. Students may form their own teams if they wish. To do so, first choose an aptly named <a href="https://en.wikipedia.org/wiki/List_of_colors:_A%E2%80%93F">color</a> that suits your team. Choose one that is not copyrighted (not owned by crayon or paint companies, for example). Once your color (and thus team name) is selected, specify your team name and members, with roles, in the shared <a href="https://docs.google.com/spreadsheets/d/1Cf8cRfNoRjl7FLzo_Z9F8Wu2jJQdsQjwVF6Fcev2vec">CSE 308 Team</a> Google Sheet. Note that you should set the fill color for your cells to your team color, and make sure the text color is a color with enough contrast such that it is neat and legible. Should your team be missing a member or two, just place a '<strong>?</strong>' in the cell representing the position you're looking to fill.</p>
+        <p>Development teams, with roles, will be listed below as they are determined. Students may form their own teams if they wish. To do so, first choose an aptly named <a href="https://en.wikipedia.org/wiki/List_of_colors:_A%E2%80%93F">color</a> that suits your team. Choose one that is not copyrighted (not owned by crayon or paint companies, for example). Once your color (and thus team name) is selected, specify your team name and members, with roles, in the shared <a href="https://docs.google.com/spreadsheets/d/1Cf8cRfNoRjl7FLzo_Z9F8Wu2jJQdsQjwVF6Fcev2vec">WAE 998 Team</a> Google Sheet. Note that you should set the fill color for your cells to your team color, and make sure the text color is a color with enough contrast such that it is neat and legible. Should your team be missing a member or two, just place a '<strong>?</strong>' in the cell representing the position you're looking to fill.</p>
         <p>Students not assigned to a team by the second lecture will be placed by the instructor. If you are to form your own team, I strongly advise forming teams around similar schedules. For example, past experience has shown that commuting students work well together because they may choose to meet and work off-campus rather than on. Note that should any changes to a team occur, the instructor must immediately be informed, as this is the only official teams list. As teams are formed they will be listed below, which also contains the current pool of students without a team.</p>
 
         <div id="teams_tables">
@@ -108,7 +108,7 @@
         <a href="http://www.cs.stonybrook.edu"><img style="float:right" src="./images/CSLogo.png" alt="CS" /></a>
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br />
-            by <a href="http://www.cs.stonybrook.edu/~richard">Richard McKenna</a><br /><br /><br /><br /></p>
+            by <a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a><br /><br /><br /><br /></p>
     </div>
 </div>
 </body>
