--- a/RyansAppFramework/work/ExportTests/syllabus.html
+++ b/RyansAppFramework/work/ExportTests/syllabus.html
@@ -3,7 +3,7 @@
 <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>CSE 308</title>
+    <title>WAE 998</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 
@@ -97,7 +97,7 @@
 
     <div id="banner">
         <!-- BANNER NEEDS TO BE SET -->
-        CSE 308 -Fall 2016<br>SOMETHING FOR TITLE!
+        WAE 998 -North Korea 2099<br>How To Kill A Mockingbird
     </div>
 
     <div id="desc">
@@ -140,7 +140,7 @@
 
             <h3>PREREQUISITES</h3>
 
-            <p>You must have taken CSE 214 and received a grade of "C" or better in order to take this course.
+            <p>You must have taken WAE 214 and received a grade of "C" or better in order to take this course.
                 In more detail, you are expected to have the following knowledge and skills at the beginning of the course:</p>
             <ul>
                 <li>Ability to write programs of a few hundred lines of code in the Java programming language.</li>
@@ -172,8 +172,8 @@
 
             <table>
                 <tr>
-                    <td style="font-size:14pt"><a href="SOME VALUE>
-			   TESTAAAA</a><br />
+                    <td style="font-size:14pt"><a href="A dog house in southern nebraska cause why not>
+			   Dr. Doggy Von Woomphkins</a><br />
 			<strong>richard@cs.stonybrook.edu</strong><br />
 			216 New Computer Science Building<br />
 			<strong>Office Hours:</strong><br />
@@ -189,7 +189,7 @@
             </table>
             </td>
             <td>
-                <img src="./images/TESTAAAA.jpg" alt="TESTAAAA Profile" style="margin-left:30px;"/>
+                <img src="./images/Dr. Doggy Von Woomphkins.jpg" alt="Dr. Doggy Von Woomphkins Profile" style="margin-left:30px;"/>
             </td>
             </table>
 
@@ -254,7 +254,7 @@
             <h3 id="ceas_tutoring">COLLEGE OF ENGINEERING TUTORING SERVICES (Engineering 236B)</h3>
 
             <p>
-                Stony Brook University and the College of Engineering and Applied Sciences offers FREE tutoring services for CSE 308 in Engineering, Room 236B during the following days/times:</p>
+                Stony Brook University and the College of Engineering and Applied Sciences offers FREE tutoring services for WAE 998 in Engineering, Room 236B during the following days/times:</p>
 
             <ul>
                 <li><strong>Monday:</strong> TBA</li>
@@ -410,7 +410,7 @@
 
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br>
-            by <span id="instructor_link"><a href=SOME VALUE>TESTAAAA</a></span>
+            by <span id="instructor_link"><a href=A dog house in southern nebraska cause why not>Dr. Doggy Von Woomphkins</a></span>
             <br>
             <br>
             <br>
