--- a/RyansAppFramework/work/ExportTests/hws.html
+++ b/RyansAppFramework/work/ExportTests/hws.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>CSE 219</title>
+    <title>WAE 998</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <link href="./css/course_homepage_layout.css" rel="stylesheet" type="text/css">
     <link href="./css/sea_wolf.css" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
 
     <div id="banner">
         <!-- BANNER NEEDS TO BE SET -->
-        CSE 219 -Fall 2016<br/>SOMETHING FOR TITLE!
+        WAE 998 -North Korea 2099<br/>How To Kill A Mockingbird
     </div>
 
     <div id="desc">
@@ -60,7 +60,7 @@
         <a href="http://www.cs.stonybrook.edu"><img alt="CS" src="./images/CSLogo.png" style="float:right"></a>
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br/>
-            by <span id="instructor_link"><a href="http://www.cs.stonybrook.edu/~richard">Richard McKenna</a></span>
+            by <span id="instructor_link"><a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a></span>
             <br/>
             <br/>
             <br/>
