--- a/RyansAppFramework/work/ExportTests/projects.html
+++ b/RyansAppFramework/work/ExportTests/projects.html
@@ -3,8 +3,8 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <meta name="description" content="CSE 308 - Software Engineering - Spring 2017 Projects Page" />
-  <title>CSE 308 Projects</title> 
+  <meta name="description" content="WAE 998 - How To Kill A Mockingbird - North Korea 2099 Projects Page" />
+  <title>WAE 998 Projects</title> 
   <link rel="stylesheet" type="text/css" href="./css/course_homepage_layout.css" />
   <link rel="stylesheet" type="text/css" href="./css/sea_wolf.css" />
   <style>
@@ -45,8 +45,8 @@
 
 
    <div id="banner">
-    CSE 308 - Spring 2017<br />
-    Software Engineering
+    WAE 998 - North Korea 2099<br />
+    How To Kill A Mockingbird
    </div>
 
    <div id="desc">
@@ -65,7 +65,7 @@
      <a href="http://www.cs.stonybrook.edu"><img style="float:right" src="./images/CSLogo.png" alt="CS" /></a>
 
      <p style="font-size:9pt; text-align:center;">Web page created and maintained<br />
-     by <a href="http://www.cs.stonybrook.edu/~richard">Richard McKenna</a><br /><br /><br /><br /></p>
+     by <a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a><br /><br /><br /><br /></p>
    </div>
   </div>
 
