--- a/RyansAppFramework/work/ExportTests/schedule.html
+++ b/RyansAppFramework/work/ExportTests/schedule.html
@@ -4,7 +4,7 @@
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- TITLE HAS TO BE SET -->
 
-    <title>CSE 308</title>
+    <title>WAE 998</title>
 
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 
@@ -43,7 +43,7 @@
 
     <div id="banner">
         <!-- BANNER NEEDS TO BE SET -->
-        CSE 308 -Spring 2017<br/>SOMETHING FOR TITLE!
+        WAE 998 -North Korea 2099<br/>How To Kill A Mockingbird
     </div>
 
     <div id="desc">
@@ -64,7 +64,7 @@
 
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br/>
-            by <span id="instructor_link"><a href="SOME VALUE">TESTAAAA</a></span>
+            by <span id="instructor_link"><a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a></span>
             <br/>
             <br/>
             <br/>
