images work now

--- a/RyansAppFramework/work/ExportTests/index.html
+++ b/RyansAppFramework/work/ExportTests/index.html
@@ -40,7 +40,7 @@
 <div id="content">
 
     <div id="navbar">
-        <a href="http://www.stonybrook.edu"><img alt="Stony Brook University" class="sbu_navbar" src="./images/SBUDarkRedShieldLogo.png"></a>
+        <a href="http://www.stonybrook.edu"><img alt="Stony Brook University" class="sbu_navbar" src="./images/Screen Shot 2017-05-07 at 7.24.50 PM.png"></a>
         <!-- NAVIGATION LINKS GO HERE -->
         <a class="open_nav" href="index.html" id="home_link">Home</a>
         <a class="nav" href="syllabus.html" id="syllabus_link">Syllabus</a>
@@ -104,8 +104,8 @@
 
         <hr />
 
-        <a href="http://www.stonybrook.edu"><img class="sunysb" style="float:left" src="./images/SBUWhiteShieldLogo.jpg" alt="SBU" /></a>
-        <a href="http://www.cs.stonybrook.edu"><img style="float:right" src="./images/CSLogo.png" alt="CS" /></a>
+        <a href="http://www.stonybrook.edu"><img class="sunysb" style="float:left" src="./images/Screen Shot 2017-05-07 at 7.24.46 PM.png" alt="SBU" /></a>
+        <a href="http://www.cs.stonybrook.edu"><img style="float:right" src="./images/Screen Shot 2017-05-07 at 7.24.48 PM.png" alt="CS" /></a>
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br />
             by <a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a><br /><br /><br /><br /></p>
