--- a/RyansAppFramework/work/ExportTests/hws.html
+++ b/RyansAppFramework/work/ExportTests/hws.html
@@ -23,7 +23,7 @@
 <body>
 <div id="content">
     <div id="navbar">
-        <a href="http://www.stonybrook.edu"><img alt="Stony Brook University" class="sbu_navbar" src="./images/SBUDarkRedShieldLogo.png"></a>
+        <a href="http://www.stonybrook.edu"><img alt="Stony Brook University" class="sbu_navbar" src="./images/Screen Shot 2017-05-07 at 7.24.50 PM.png"></a>
         <!-- NAVIGATION LINKS GO HERE -->
         <a class="nav" href="index.html" id="home_link">Home</a>
         <a class="nav" href="syllabus.html" id="syllabus_link">Syllabus</a>
@@ -56,8 +56,8 @@
         <br/>
         <hr/>
 
-        <a href="http://www.stonybrook.edu"><img alt="SBU" class="sunysb" src="./images/SBUWhiteShieldLogo.jpg" style="float:left"></a>
-        <a href="http://www.cs.stonybrook.edu"><img alt="CS" src="./images/CSLogo.png" style="float:right"></a>
+        <a href="http://www.stonybrook.edu"><img alt="SBU" class="sunysb" src="./images/Screen Shot 2017-05-07 at 7.24.46 PM.png" style="float:left"></a>
+        <a href="http://www.cs.stonybrook.edu"><img alt="CS" src="./images/Screen Shot 2017-05-07 at 7.24.48 PM.png" style="float:right"></a>
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br/>
             by <span id="instructor_link"><a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a></span>
