--- a/RyansAppFramework/work/ExportTests/schedule.html
+++ b/RyansAppFramework/work/ExportTests/schedule.html
@@ -31,7 +31,7 @@
 <div id="content">
 
         <div id="navbar">
-            <a href="http://www.stonybrook.edu"><img alt="Stony Brook University" class="sbu_navbar" src="./images/SBUDarkRedShieldLogo.png"></a>
+            <a href="http://www.stonybrook.edu"><img alt="Stony Brook University" class="sbu_navbar" src="./images/Screen Shot 2017-05-07 at 7.24.50 PM.png"></a>
             <!-- NAVIGATION LINKS GO HERE -->
             <a class="nav" href="index.html" id="home_link">Home</a>
             <a class="nav" href="syllabus.html" id="syllabus_link">Syllabus</a>
@@ -59,8 +59,8 @@
         <hr>
 
 
-        <a href="http://www.stonybrook.edu"><img alt="SBU" class="sunysb" src="./images/SBUWhiteShieldLogo.jpg" style="float:left"></a>
-        <a href="http://www.cs.stonybrook.edu"><img alt="CS" src="./images/CSLogo.png" style="float:right"></a>
+        <a href="http://www.stonybrook.edu"><img alt="SBU" class="sunysb" src="./images/Screen Shot 2017-05-07 at 7.24.46 PM.png" style="float:left"></a>
+        <a href="http://www.cs.stonybrook.edu"><img alt="CS" src="./images/Screen Shot 2017-05-07 at 7.24.48 PM.png" style="float:right"></a>
 
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br/>
