--- a/RyansAppFramework/work/ExportTests/hws.html
+++ b/RyansAppFramework/work/ExportTests/hws.html
@@ -60,7 +60,7 @@
         <a href="http://www.cs.stonybrook.edu"><img alt="CS" src="./images/Screen Shot 2017-05-07 at 7.24.48 PM.png" style="float:right"></a>
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br/>
-            by <span id="instructor_link"><a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a></span>
+            by <span id="instructor_link"><a href="http://www.omfgdogs.com/">Dr. Doggy Von Woomphkins</a></span>
             <br/>
             <br/>
             <br/>
