--- a/RyansAppFramework/work/ExportTests/schedule.html
+++ b/RyansAppFramework/work/ExportTests/schedule.html
@@ -64,7 +64,7 @@
 
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br/>
-            by <span id="instructor_link"><a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a></span>
+            by <span id="instructor_link"><a href="http://www.omfgdogs.com/">Dr. Doggy Von Woomphkins</a></span>
             <br/>
             <br/>
             <br/>
