--- a/RyansAppFramework/work/ExportTests/syllabus.html
+++ b/RyansAppFramework/work/ExportTests/syllabus.html
@@ -172,7 +172,7 @@
 
             <table>
                 <tr>
-                    <td style="font-size:14pt"><a href="A dog house in southern nebraska cause why not>
+                    <td style="font-size:14pt"><a href="http://www.omfgdogs.com/>
 			   Dr. Doggy Von Woomphkins</a><br />
 			<strong>richard@cs.stonybrook.edu</strong><br />
 			216 New Computer Science Building<br />
@@ -410,7 +410,7 @@
 
 
         <p style="font-size:9pt; text-align:center;">Web page created and maintained<br>
-            by <span id="instructor_link"><a href=A dog house in southern nebraska cause why not>Dr. Doggy Von Woomphkins</a></span>
+            by <span id="instructor_link"><a href=http://www.omfgdogs.com/>Dr. Doggy Von Woomphkins</a></span>
             <br>
             <br>
             <br>
