--- a/RyansAppFramework/work/ExportTests/projects.html
+++ b/RyansAppFramework/work/ExportTests/projects.html
@@ -65,7 +65,7 @@
      <a href="http://www.cs.stonybrook.edu"><img style="float:right" src="./images/Screen Shot 2017-05-07 at 7.24.48 PM.png" alt="CS" /></a>
 
      <p style="font-size:9pt; text-align:center;">Web page created and maintained<br />
-     by <a href="A dog house in southern nebraska cause why not">Dr. Doggy Von Woomphkins</a><br /><br /><br /><br /></p>
+     by <a href="http://www.omfgdogs.com/">Dr. Doggy Von Woomphkins</a><br /><br /><br /><br /></p>
    </div>
   </div>
 
